tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 1: layout qualifier 'origin_upper_left' is not permitted here
error: 1: layout qualifier 'push_constant' is not permitted here
error: 1: layout qualifier 'blend_support_all_equations' is not permitted here
error: 1: layout qualifier 'color' is not permitted here
error: 1: layout qualifier 'location' is not permitted here
error: 1: layout qualifier 'offset' is not permitted here
error: 1: layout qualifier 'binding' is not permitted here
error: 1: layout qualifier 'index' is not permitted here
error: 1: layout qualifier 'set' is not permitted here
error: 1: layout qualifier 'builtin' is not permitted here
error: 1: layout qualifier 'input_attachment_index' is not permitted here
error: 16: layout qualifier 'origin_upper_left' is not permitted here
error: 16: layout qualifier 'push_constant' is not permitted here
error: 16: layout qualifier 'blend_support_all_equations' is not permitted here
error: 16: layout qualifier 'color' is not permitted here
error: 16: layout qualifier 'location' is not permitted here
error: 16: layout qualifier 'offset' is not permitted here
error: 16: layout qualifier 'binding' is not permitted here
error: 16: layout qualifier 'index' is not permitted here
error: 16: layout qualifier 'set' is not permitted here
error: 16: layout qualifier 'builtin' is not permitted here
error: 16: layout qualifier 'input_attachment_index' is not permitted here
22 errors
